--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,4 +5,5 @@
         culpa corporis saepe delectus, aspernatur voluptatum praesentium cupiditate, iure aperiam. Culpa distinctio a accusantium ex.</p>
 
         <p>pkjhgg</p>
+        <p>learn git anamika</p>
 </div>
