--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,4 +13,8 @@
         <h3>achalll update</h3>
         <p>hello Achal bhutmare</p>
 
+
+        <h3>monali atone</h3>
+        <p>hello monali atone</p>
+
 </div>
